feat: Adding user post entity

--- a/5-socialMediaApp/src/main/resources/messages_ar.properties
+++ b/5-socialMediaApp/src/main/resources/messages_ar.properties
@@ -1,3 +1,4 @@
 user.not.found= المستخدم غير موجود بالمعرف {0}
 failed.to.update.user.not.found= فشل في تحديث المستخدم، المستخدم غير موجود بالمعرف {0}
 failed.to.delete.user.not.found= فشل في حذف المستخدم، المستخدم غير موجود بالمعرف {0}
+invalid.user.id= معرف المستخدم غير صالح {0}
