--- a/5-socialMediaApp/src/main/resources/messages.properties
+++ b/5-socialMediaApp/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 user.not.found= user not found with id {0}
 failed.to.update.user.not.found= failed to update, user not found with id {0}
 failed.to.delete.user.not.found= failed to delete, user not found with id {0}
+invalid.user.id= invalid user id {0}
