--- a/5-socialMediaApp/src/main/resources/messages_fr.properties
+++ b/5-socialMediaApp/src/main/resources/messages_fr.properties
@@ -1,3 +1,4 @@
 user.not.found= utilisateur non trouvé avec l'id {0}
 failed.to.update.user.not.found= faillite de mettre à jour, utilisateur non trouvé avec l'id {0}
 failed.to.delete.user.not.found= faillite de supprimer, utilisateur non trouvé avec l'id {0}
+invalid.user.id= id utilisateur invalide {0}
